GIAPI-903 Removed provision pom file #time 25m
git-svn-id: http://source.gemini.edu/software/giapi/giapi-osgi/trunk@42213 ee6ba543-07f8-4773-b02c-01d50e9d00ba